--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,13 +73,14 @@ input, select, textarea {
 }
 
 /* cyrillic */
-	@font-face {
-	  font-family: 'Bad Script';
-	  font-style: normal;
-	  font-weight: 400;
-	  src: local('Bad Script Regular'), local('BadScript-Regular'), url(https://fonts.gstatic.com/s/badscript/v6/6NUT8F6PJgbFWQn47_x7pOskzA.woff2) format('woff2');
-	  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-	}
+@font-face {
+    font-family: 'Bad Script';
+    font-style: normal;
+    font-display: auto;
+    font-weight: 400;
+    src: local('Bad Script Regular'), local('BadScript-Regular'), url(https://fonts.gstatic.com/s/badscript/v6/6NUT8F6PJgbFWQn47_x7pOskzA.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
 
 
 /* Extra Things */
@@ -87,13 +88,14 @@ body{background: #eee ;font-family: 'Open Sans', sans-serif;}h3{font-size: 30px;
 
 
 /* latin */
-	@font-face {
-	  font-family: 'Bad Script';
-	  font-style: normal;
-	  font-weight: 400;
- 	 src: local('Bad Script Regular'), local('BadScript-Regular'), url(https://fonts.gstatic.com/s/badscript/v6/6NUT8F6PJgbFWQn47_x7pOskzA.woff2) format('woff2');
-	  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-	}
+@font-face {
+    font-family: 'Bad Script';
+    font-style: normal;
+    font-display: auto;
+    font-weight: 400;
+    src: local('Bad Script Regular'), local('BadScript-Regular'), url(https://fonts.gstatic.com/s/badscript/v6/6NUT8F6PJgbFWQn47_x7pOskzA.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 /* Basic */
 
