--- a/hyphoto/assets/css/main.css
+++ b/hyphoto/assets/css/main.css
@@ -191,14 +191,15 @@ input, select, textarea {
 
 /* Type */
 
-	body, input, select, textarea {
-		color: #a0a0a1;
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
-		font-size: 15pt;
-		font-weight: 300;
-		letter-spacing: 0.025em;
-		line-height: 1.65;
-	}
+body, input, select, textarea {
+    color: #a0a0a1;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-size: 15pt;
+    font-weight: 300;
+    font-display: auto;
+    letter-spacing: 0.025em;
+    line-height: 1.65;
+}
 
 		@media screen and (max-width: 1680px) {
 
